--- a/src/Aboutus.css
+++ b/src/Aboutus.css
@@ -56,8 +56,9 @@
   
   .about-us-image {
     width: 600px;
-    height: auto;
+    height: 400px;
     border-radius: 8px;
+    background-color: #bfbfbf;
      box-shadow: 0 4px 6px rgba(11, 11, 11, 0.1); 
   }
   
