--- a/src/Footer.css
+++ b/src/Footer.css
@@ -26,13 +26,13 @@
   
   /* About Section (70%) */
   .footer-about {
-    width: 70%;
+    width: 60%;
     padding: 1.5rem;
     text-align: left;
   }
   
   .footer-title {
-    font-size: 3rem;
+    font-size: 4rem;
     font-weight: bold;
     margin-bottom: 1rem;
   }
@@ -44,7 +44,7 @@
   
   /* Legals Section (30%) */
   .footer-legals {
-    width: 30%;
+    width: 40%;
     padding: 1.5rem;
     text-align: left;
   }
@@ -88,3 +88,8 @@
     color: gray;
   }
   
+  .legals-icon {
+    margin-right: 8px;
+    font-size: 16px;
+    color: white; /* Adjust icon color */
+  }
