--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,7 @@
     position: relative;
     overflow: hidden;
     padding: 2.5rem 0;
-    background-color: #08315c;
+    background-color: #12124d;
     color: white;
     width: 100%;
 
